# Pulse-HMS-1

./: .gitignore  .replit  About App.md  README.md  README_ADMIN.md  ROADMAP.md  WORKFLOW.md  app.py  app_enhanced.py  pyproject.toml  replit.md  requirements.txt
.vercel/: project.json
assets/: style.css
components/: __init__.py  advanced_analytics.py  auth.py  bed_management.py  billing_finance.py  inventory_management.py  medical_records.py  medicine_manager.py  monitoring.py  notifications.py  patient_manager.py  pdf_generator.py  preloader.py  scheduling.py  staff_management.py  themes.py  ui_enhancements.py
data/: appointments.json  beds.json  patient_data.json  services.json  users.json
utils/: data_manager.py  risk_calculator.py  visualizations.py
