[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.46.1",
    "streamlit-aggrid>=1.1.6",
    "bcrypt>=4.3.0",
    "schedule>=1.2.2",
    "weasyprint>=65.1",
    "reportlab>=4.4.2",
    "twilio>=9.6.5",
    "sendgrid>=6.12.4",
    "notion-client>=2.4.0",
]
